Harden System Security v1.0.9.0
What's New

On the Protect page, all subcategories are now deselected by default. Each option must be explicitly checked to be included, eliminating the risk of accidental enabling.

The Protect page now displays color-coded advisories for subcategories that have a greater impact on the system. These prominent warnings help users make informed choices; the same guidance is available in the project's documentation on GitHub.

The elevation request dialog has been updated to respect the app’s layout flow (left-to-right or right-to-left), matching the direction selected in the app settings.

BitLocker New Features
Full Drive Encryption
You can now enable BitLocker encryption for the Operating System (OS) drive, fixed drives, and removable drives via a guided, safety-first workflow. All messages and UI elements related to BitLocker are localized for the languages supported by the app. BitLocker management is implemented in the low-level ComManager component of Harden System Security.

Add or Modify Key Protectors
A step-by-step workflow allows you to add and modify a variety of key protectors for BitLocker-protected volumes, making key management straightforward and auditable.

Suspend BitLocker Encryption
Need to update firmware or perform maintenance? Use the Suspend feature to temporarily suspend BitLocker protection on the OS drive. You may optionally specify the number of restarts after which protection will be automatically resumed.

Resume BitLocker Encryption
Quickly resume protection for drives whose BitLocker state was previously suspended.

Backup BitLocker Key Protectors
Back up recovery passwords and key protector details for your drives so you have access to the required 48-character recovery keys when needed.

Because BitLocker operations can be consequential, every action requires explicit confirmation before proceeding. Additionally, the preselected (focused) button in each confirmation dialog is Cancel to further reduce 

--- a/AppControl Manager/eXclude/ComManager/ComManager.vcxproj
+++ b/AppControl Manager/eXclude/ComManager/ComManager.vcxproj
@@ -33,7 +33,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'" Label="Configuration">
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <TargetName>ComManager-ARM64</TargetName>
+    <TargetName>ComManager</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
@@ -41,7 +41,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <TargetName>ComManager-x64</TargetName>
+    <TargetName>ComManager</TargetName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -92,12 +92,14 @@
       <EnableEnhancedInstructionSet>CPUExtensionRequirementsARMv81</EnableEnhancedInstructionSet>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <GuardEHContMetadata>true</GuardEHContMetadata>
+      <StringPooling>true</StringPooling>
+      <AdditionalOptions>/Gw %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding Condition="'$(UseDynamicDebugging)' != 'true'">true</EnableCOMDATFolding>
       <OptimizeReferences Condition="'$(UseDynamicDebugging)' != 'true'">true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
       <DependentLoadFlags>0x800</DependentLoadFlags>
@@ -134,12 +136,14 @@
       <EnableEnhancedInstructionSet>AdvancedVectorExtensions</EnableEnhancedInstructionSet>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <GuardEHContMetadata>true</GuardEHContMetadata>
+      <StringPooling>true</StringPooling>
+      <AdditionalOptions>/Gw %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding Condition="'$(UseDynamicDebugging)' != 'true'">true</EnableCOMDATFolding>
       <OptimizeReferences Condition="'$(UseDynamicDebugging)' != 'true'">true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <CETCompat>true</CETCompat>
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
@@ -153,10 +157,12 @@
     <ClCompile Include="BitLocker/BitLockerEnableKeyProtectors.cpp" />
     <ClCompile Include="BitLocker/BitLockerManager.cpp" />
     <ClCompile Include="BitLocker/BitLockerRemoveKeyProtector.cpp" />
+    <ClCompile Include="BitLocker\BitLockerSuspend.cpp" />
     <ClCompile Include="ComHelpers.cpp" />
     <ClCompile Include="ComManager.cpp" />
     <ClCompile Include="Firewall/FirewallManager.cpp" />
     <ClCompile Include="Globals.cpp" />
+    <ClCompile Include="ScheduledTasks\ScheduledTasks.cpp" />
     <ClCompile Include="StringUtilities.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -166,9 +172,11 @@
     <ClInclude Include="BitLocker/BitLockerEnableKeyProtectors.h" />
     <ClInclude Include="BitLocker/BitLockerManager.h" />
     <ClInclude Include="BitLocker/BitLockerRemoveKeyProtector.h" />
+    <ClInclude Include="BitLocker\BitLockerSuspend.h" />
     <ClInclude Include="ComHelpers.h" />
     <ClInclude Include="Firewall/FirewallManager.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="ScheduledTasks\ScheduledTasks.h" />
     <ClInclude Include="StringUtilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
