--- a/.github/workflows/Build AppControl Manager for Store.yml
+++ b/.github/workflows/Build AppControl Manager for Store.yml
@@ -352,19 +352,6 @@ jobs:
                   if ($LASTEXITCODE -ne 0) { throw [System.InvalidOperationException]::New("Failed building MS Defender solution for ARM64. Exit Code: $LASTEXITCODE") }
               }
 
-              ### ScheduledTaskManager
-
-              . $MSBuildPath 'eXclude\C++ ScheduledTaskManager\ScheduledTaskManager\ScheduledTaskManager.slnx' /p:Configuration=Release /p:Platform=x64 /target:"clean;Rebuild"
-
-              if ($LASTEXITCODE -ne 0) { throw [System.InvalidOperationException]::New("Failed building ScheduledTaskManager solution for X64. Exit Code: $LASTEXITCODE") }
-
-              if (!$X64ONLY) {
-
-                  . $MSBuildPath 'eXclude\C++ ScheduledTaskManager\ScheduledTaskManager\ScheduledTaskManager.slnx' /p:Configuration=Release /p:Platform=arm64 /target:"clean;Rebuild"
-
-                  if ($LASTEXITCODE -ne 0) { throw [System.InvalidOperationException]::New("Failed building ScheduledTaskManager solution for ARM64. Exit Code: $LASTEXITCODE") }
-              }
-
               ### Shell
 
               [string]$newPFN = "$PackageFamilyName!App"
@@ -521,9 +508,7 @@ jobs:
               # Copy the X64 components to the directory before the build starts
               Copy-Item -Path '.\eXclude\Shell\x64\Release\Shell.dll' -Destination 'Shell' -Force
 
-              Copy-Item -Path '.\eXclude\C++ ScheduledTaskManager\ScheduledTaskManager\x64\Release\ScheduledTaskManager-x64.exe' -Destination '.\CppInterop\ScheduledTaskManager.exe' -Force
-
-              Copy-Item -Path '.\eXclude\ComManager\x64\Release\ComManager-x64.exe' -Destination '.\CppInterop\ComManager.exe' -Force
+              Copy-Item -Path '.\eXclude\ComManager\x64\Release\ComManager.exe' -Destination '.\CppInterop\ComManager.exe' -Force
 
               # Generate for X64 architecture
               dotnet clean 'AppControl Manager.slnx' --configuration Release
@@ -540,9 +525,7 @@ jobs:
                   # Copy the ARM64 components to the directory before the build starts
                   Copy-Item -Path '.\eXclude\Shell\ARM64\Release\Shell.dll' -Destination 'Shell' -Force
 
-                  Copy-Item -Path '.\eXclude\C++ ScheduledTaskManager\ScheduledTaskManager\ARM64\Release\ScheduledTaskManager-ARM64.exe' -Destination '.\CppInterop\ScheduledTaskManager.exe' -Force
-
-                  Copy-Item -Path '.\eXclude\ComManager\ARM64\Release\ComManager-ARM64.exe' -Destination '.\CppInterop\ComManager.exe' -Force
+                  Copy-Item -Path '.\eXclude\ComManager\ARM64\Release\ComManager.exe' -Destination '.\CppInterop\ComManager.exe' -Force
 
                   # Generate for ARM64 architecture
                   dotnet clean 'AppControl Manager.slnx' --configuration Release
