--- a/.github/workflows/ai-moderator.yml
+++ b/.github/workflows/ai-moderator.yml
@@ -6,6 +6,7 @@ on:
     types: [created]
   pull_request_review_comment:
     types: [created]
+  workflow_dispatch: 
 
 jobs:
   spam-detection:
@@ -20,8 +21,8 @@ jobs:
       - uses: github/ai-moderator@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          spam-label: 'spam'
-          ai-label: 'ai-generated'
+          spam-label: 'spam 🚨'
+          ai-label: 'ai-generated 🎭'
           minimize-detected-comments: true
           # Built-in prompt configuration (all enabled by default)
           enable-spam-detection: true
