Disable analyzers for debug/design time builds
Added <RunAnalyzers>false</RunAnalyzers> to the project file to prevent analyzers from running during debug and design time. This improves build performance, as analyzers will only run during release configuration.

--- a/Harden System Security/Harden System Security.csproj
+++ b/Harden System Security/Harden System Security.csproj
@@ -169,9 +169,18 @@
 
     <!-- Only for Debug -->
     <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+		
         <EnableXAMLDiagnostics>true</EnableXAMLDiagnostics>
         <NuGetAudit>false</NuGetAudit>
         <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+
+	    <!--
+            https://learn.microsoft.com/visualstudio/code-quality/disable-code-analysis
+            This project utilizes extensive and comprehensive analyzers that can take a lot of time to complete.
+            So we disable them for debug/design time and only run them during release configuration.
+        -->
+        <RunAnalyzers>false</RunAnalyzers>
+		
     </PropertyGroup>
 
     <!-- Only for Release -->
