--- a/Harden System Security/Harden System Security.csproj
+++ b/Harden System Security/Harden System Security.csproj
@@ -34,7 +34,7 @@
         Using the latest version as defined in the CsWinRT release notes guarantees that we use the latest CsWinRT projections features.
 
         https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref -->
-        <WindowsSdkPackageVersion>10.0.26100.75</WindowsSdkPackageVersion>
+        <WindowsSdkPackageVersion>10.0.26100.78</WindowsSdkPackageVersion>
 
         <!--
         By default .NET runtimes are contained in the MSIX. This line will also include the WindowsAppSDK in the MSIX file
@@ -84,7 +84,7 @@
         <!-- https://learn.microsoft.com/dotnet/core/deploying/native-aot/optimizing -->
 
         <ErrorReport>send</ErrorReport>
-        <FileVersion>1.0.13.0</FileVersion>
+        <FileVersion>1.0.14.0</FileVersion>
         <AssemblyVersion>$(FileVersion)</AssemblyVersion>
         <NeutralLanguage>en-US</NeutralLanguage>
         <StartupObject>HardenSystemSecurity.Program</StartupObject>
@@ -370,10 +370,10 @@
         <PackageReference Include="CommunityToolkit.WinUI.Media" Version="8.2.250402" />
         <PackageReference Include="CommunityToolkit.WinUI.Triggers" Version="8.2.250402" />
         <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.3.2" />
-        <PackageReference Include="Microsoft.Identity.Client" Version="4.77.0" />
-        <PackageReference Include="Microsoft.Identity.Client.Broker" Version="4.77.0" />
+        <PackageReference Include="Microsoft.Identity.Client" Version="4.77.1" />
+        <PackageReference Include="Microsoft.Identity.Client.Broker" Version="4.77.1" />
         <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.3.0-prerelease.250720.1" />
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250907003" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250916003" />
         <PackageReference Include="System.Security.Cryptography.Pkcs" Version="10.0.0-rc.1.25451.107" />
         <PackageReference Include="System.Diagnostics.EventLog" Version="10.0.0-rc.1.25451.107" />
 
@@ -383,16 +383,16 @@
         <PackageReference Include="CommunityToolkit.Common" Version="8.4.0" />
         <PackageReference Include="Microsoft.IdentityModel.Abstractions" Version="8.14.0" />
         <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3485.44" />
-        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4948" />
+        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.6584" />
         <PackageReference Include="runtime.win-arm64.Microsoft.DotNet.ILCompiler" Version="10.0.0-rc.1.25451.107" />
         <PackageReference Include="runtime.win-x64.Microsoft.DotNet.ILCompiler" Version="10.0.0-rc.1.25451.107" />
         <PackageReference Include="Microsoft.Identity.Client.NativeInterop" Version="0.19.4" />
-		<PackageReference Include="Microsoft.WindowsAppSDK.AI" Version="1.8.37" />
+		<PackageReference Include="Microsoft.WindowsAppSDK.AI" Version="1.8.38" />
 		<PackageReference Include="Microsoft.WindowsAppSDK.Base" Version="1.8.250831001" />
 		<PackageReference Include="Microsoft.WindowsAppSDK.DWrite" Version="1.8.25090401" />
 		<PackageReference Include="Microsoft.WindowsAppSDK.Foundation" Version="1.8.250906002" />
 		<PackageReference Include="Microsoft.WindowsAppSDK.InteractiveExperiences" Version="1.8.250906004" />
-		<PackageReference Include="Microsoft.WindowsAppSDK.Runtime" Version="1.8.250907003" />
+		<PackageReference Include="Microsoft.WindowsAppSDK.Runtime" Version="1.8.250916003" />
 		<PackageReference Include="Microsoft.WindowsAppSDK.Widgets" Version="1.8.250904007" />
 		<PackageReference Include="Microsoft.WindowsAppSDK.WinUI" Version="1.8.250906003" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools.MSIX" Version="1.7.20250829.1">
@@ -493,6 +493,9 @@
         <Content Include="DISMService.exe">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <Content Include="QuantumRelayHSS.exe">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
         <Content Include="Resources\AttackSurfaceReductionRules.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
@@ -579,4 +582,7 @@
         </Content>
     </ItemGroup>
 
+	<!-- Imports the Common Core -->
+	<Import Project="..\AppControl Manager\eXclude\CommonCore\CommonCore.projitems" Label="Shared" />
+	
 </Project>
